// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluginItem > (Snapshot) renders disabled state 1`] = `
<DocumentFragment>
  <div
    class="border-border text-foreground flex h-full w-full rounded border-2 p-4 bg-background shadow-shadow opacity-30 relative transition-opacity duration-250"
  >
    <div
      class="flex w-full flex-wrap items-start gap-4"
    >
      <div
        class="border-border text-foreground flex rounded border-2 bg-background-secondary shadow-none h-12 w-12 flex-shrink-0 items-center justify-center overflow-hidden p-0"
      >
        <svg
          class="lucide lucide-music"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 18V5l12-2v13"
          />
          <circle
            cx="6"
            cy="18"
            r="3"
          />
          <circle
            cx="18"
            cy="16"
            r="3"
          />
        </svg>
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <h3
          class="text-foreground inline-flex items-center gap-4 text-lg leading-tight font-bold"
        >
          Disabled Plugin
        </h3>
        <p
          class="text-foreground-secondary mt-1 text-sm"
        >
          by Nuclear Team
        </p>
        <p
          class="text-foreground-secondary mt-2 text-sm leading-relaxed"
        >
          This plugin is currently disabled.
        </p>
      </div>
      <div
        class="flex h-full shrink-0 flex-col items-start justify-center sm:w-auto sm:items-end"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginItem > (Snapshot) renders rightAccessory content 1`] = `
<DocumentFragment>
  <div
    class="border-border text-foreground flex h-full w-full rounded border-2 p-4 bg-background shadow-shadow relative transition-opacity duration-250"
  >
    <div
      class="flex w-full flex-wrap items-start gap-4"
    >
      <div
        class="min-w-0 flex-1"
      >
        <h3
          class="text-foreground inline-flex items-center gap-4 text-lg leading-tight font-bold"
        >
          Accessory Plugin
        </h3>
        <p
          class="text-foreground-secondary mt-1 text-sm"
        >
          by Nuclear Team
        </p>
        <p
          class="text-foreground-secondary mt-2 text-sm leading-relaxed"
        >
          Has accessory on the right.
        </p>
      </div>
      <div
        class="flex h-full shrink-0 flex-col items-start justify-center sm:w-auto sm:items-end"
      >
        <span>
          Accessory
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginItem > (Snapshot) renders with all props 1`] = `
<DocumentFragment>
  <div
    class="border-border text-foreground flex h-full w-full rounded border-2 p-4 bg-background shadow-shadow relative transition-opacity duration-250"
  >
    <div
      class="flex w-full flex-wrap items-start gap-4"
    >
      <div
        class="border-border text-foreground flex rounded border-2 bg-background-secondary shadow-none h-12 w-12 flex-shrink-0 items-center justify-center overflow-hidden p-0"
      >
        <svg
          class="lucide lucide-music"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M9 18V5l12-2v13"
          />
          <circle
            cx="6"
            cy="18"
            r="3"
          />
          <circle
            cx="18"
            cy="16"
            r="3"
          />
        </svg>
      </div>
      <div
        class="min-w-0 flex-1"
      >
        <h3
          class="text-foreground inline-flex items-center gap-4 text-lg leading-tight font-bold"
        >
          YouTube Music
          <button
            class="inline-flex cursor-pointer items-center rounded transition-all disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border shadow-shadow hover:translate-x-shadow-x hover:translate-y-shadow-y border-2 hover:shadow-none size-10 justify-center"
          >
            <svg
              class="lucide lucide-settings"
              fill="none"
              height="20"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12.22 2h-.44a2 2 0 0 0-2 2v.18a2 2 0 0 1-1 1.73l-.43.25a2 2 0 0 1-2 0l-.15-.08a2 2 0 0 0-2.73.73l-.22.38a2 2 0 0 0 .73 2.73l.15.1a2 2 0 0 1 1 1.72v.51a2 2 0 0 1-1 1.74l-.15.09a2 2 0 0 0-.73 2.73l.22.38a2 2 0 0 0 2.73.73l.15-.08a2 2 0 0 1 2 0l.43.25a2 2 0 0 1 1 1.73V20a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2v-.18a2 2 0 0 1 1-1.73l.43-.25a2 2 0 0 1 2 0l.15.08a2 2 0 0 0 2.73-.73l.22-.39a2 2 0 0 0-.73-2.73l-.15-.08a2 2 0 0 1-1-1.74v-.5a2 2 0 0 1 1-1.74l.15-.09a2 2 0 0 0 .73-2.73l-.22-.38a2 2 0 0 0-2.73-.73l-.15.08a2 2 0 0 1-2 0l-.43-.25a2 2 0 0 1-1-1.73V4a2 2 0 0 0-2-2z"
              />
              <circle
                cx="12"
                cy="12"
                r="3"
              />
            </svg>
          </button>
        </h3>
        <p
          class="text-foreground-secondary mt-1 text-sm"
        >
          by Nuclear Team
        </p>
        <p
          class="text-foreground-secondary mt-2 text-sm leading-relaxed"
        >
          Stream music directly from YouTube Music with full search and playlist support.
        </p>
      </div>
      <div
        class="flex h-full shrink-0 flex-col items-start justify-center sm:w-auto sm:items-end"
      />
    </div>
  </div>
</DocumentFragment>
`;
